# MonaceBot

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs  pkg.rs  suse.rs
