[package]
name = "MonaceBot"
version = "0.1.0"
authors = ["imonace <mail@mona.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# bot framework stuff
teloxide = { version = "0.4", features = ["auto-send"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
