[package]
name = "monace_bot"
version = "0.1.0"
authors = ["imonace <mail@mona.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# web stuff
reqwest = { version = "0.11", features = ["json"] }

# bot framework stuff
teloxide = { version = "0.4", features = ["macros", "auto-send"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tokio-test = "0.4.1"

[profile.release]
lto = true